_sass/main.scss
$white: #ffffff;
$grey-100: #f2f0f3;
$grey-300: #C4AAAF;
$grey-400: #897279;
$grey-700: #3B2E33;

$green-400: #567b68; // #839785;
$green-500: #4e5f55;

$border-radius: 4px;


$unit: 1rem;
$spacing-100: 0.25 * $unit;
$spacing-200: 0.375 * $unit;
$spacing-300: 0.5 * $unit;
$spacing-400: 0.75 * $unit;
$spacing-500: 1.25 * $unit;
$spacing-600: 2 * $unit;
$spacing-700: 3.25 * $unit;
$spacing-800: 5.25 * $unit;
$spacing-900: 8.5 * $unit;

$font-size-200: 0.5rem;
$font-size-300: 0.75rem;
$font-size-400: 0.875rem;
$font-size-500: 1rem;
$font-size-600: 1.25rem;
$font-size-700: 1.5rem;
$font-size-800: 2.25rem;
$font-size-900: 3rem;

$screen_xs: 600px;
$screen_sm: 740px;

* {
  box-sizing: border-box;
}

body {
  background: $grey-100;
  margin: 2rem;
  font-family: 'Libre Baskerville', serif;

  line-height: 1.7;
  color: $grey-700;

}

.header--wrapper {
  background-color: $green-400;
  position: relative;
  color: $grey-100;
  border-radius: $spacing-300;
  margin-bottom: $spacing-700;

  @media only screen and (min-width: $screen_xs) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-top: $spacing-700;
  }
}

.header--image {
  justify-self: center;
  width: 100%;
  max-width: 350px;
  margin: auto;
  display: block;
}

.header--main {
  justify-content: center;
  flex-direction: column;
  display: flex;
  padding-right: $spacing-500;
  padding-left: $spacing-500;
  margin-top: $spacing-500;

  @media only screen and (min-width: $screen_xs) {
    margin-top: 0;
  }
}

.header--title {
  font-size: $font-size-900;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;
  margin-top: 0;
  margin-bottom: $spacing-300;
}

.header--sub-title {
  font-size: $font-size-700;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;
  margin-top: 0;
  margin-bottom: $spacing-200;
}

// ----------------------

.app-section--wrapper {
  display: grid;
  background-color: $white;
  border-radius: $spacing-300;
  margin-bottom: $spacing-700;

  @media only screen and (min-width: $screen_sm) {
    grid-template-columns: 1fr 200px 1fr;
    grid-template-rows: 1fr 1fr;
  }
}

.app-section--image {
  width: 100%;
  display: block;
  grid-row-start: 3;
  max-width: 350px;
  margin: auto;

  @media only screen and (min-width: $screen_sm) {
    grid-column-start: 2;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: -1;
  }
}

.app-section--item {
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: $spacing-500;
  @media only screen and (min-width: $screen_sm) {
    &:nth-child(2n) {
      justify-content: flex-end;
    }

    &:nth-child(2n + 1) {
      justify-content: flex-start;
    }
  }
}

.app-section--title {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;
  font-size: $font-size-700;
  margin-bottom: 0;
}

// ----------------------

.blog-excerpts--wrapper {
  display: grid;
  box-sizing: border-box;
  grid-gap: $spacing-500;
  width:100%;
  grid-template-columns: repeat(2,  minmax(0, 1fr));
  margin-bottom: $spacing-700;

  @media only screen and (min-width: $screen_sm) {
    grid-template-columns: repeat(4,  minmax(0, 1fr));
  }
}

.blog-excerpts--item {
  background-color: $white;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  border-radius: $border-radius;
  box-shadow: 0px 2px 6px 0px rgba(59,46,51,0.15);
  transition: all 200ms;
  &:hover {
    box-shadow: 0px 2px 10px 0px rgba(59,46,51,0.35);
  }
}

.blog-excerpts--item:first-child {
  margin-left: 0;
}

.blog-excerpts--heading {
  color: $grey-700;
  order: 2;
  margin-bottom: 0;
  padding-left: $spacing-500;
  padding-right: $spacing-500;
  margin-top: $spacing-200;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;
  font-size: $font-size-700;
}

.blog-excerpts--excerpt {
  order: 3;
  color: $grey-700;
  padding-left: $spacing-500;
  padding-right: $spacing-500;
  padding-bottom: $spacing-500;
  font-size: $font-size-400;
}


.blog-excerpts--image {
  display: block;
  order: 1;
  border-radius: $border-radius;
  width: 100%;
}

.blog-excerpts--header {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: $font-size-800;
  text-align: center;
}


// -------------------

.newsletter--form {
  display: flex;
}
.newsletter--form-label {
  display: none;
}

.newsletter--form-input {
  border: 1px solid $grey-300;
  padding: $spacing-400 $spacing-500;
  color: $grey-700;
  font-family: 'Libre Baskerville', serif;
  font-size: $font-size-400;
  border-radius: $spacing-100;
  display: block;
  width: 100%;
}


.newsletter--submit {
  background: transparent;
  color: $grey-100;
  border: none;
  font-family: 'Roboto Condensed', sans-serif;
  border: 2px solid $grey-100;
  font-size: $font-size-500;
  padding: $spacing-300 $spacing-500;
  border-radius: $spacing-100;
  text-transform: uppercase;
  transition: all 200ms;
  cursor: pointer;
  margin-left: $spacing-300;

  &:hover {
    background-color: $grey-100;
    color: $green-500;
  }
}

.newsletter--heading {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: $font-size-600;
}

.newsletter--subheading {
  font-family: 'Libre Baskerville', serif;
  font-size: $font-size-400;
}


.newsletter--notice {
  font-family: 'Libre Baskerville', serif;
  font-size: $font-size-200;
}

.newsletter--notice a {
  color: $grey-100;
}

.newsletter--channels {
  display: none;
}

// -------------

.post-wrapper {
  background: $white;
  max-width: 1200px;
  margin: auto;
  border-radius: $spacing-300;
}

.post--image {
  border-radius: $spacing-300;
  width: 100%;
  display: block;
}

.post--content {
  padding: $spacing-500;
  margin-bottom: $spacing-700;

  *:first-child {
    margin-top: 0;
  }
  *:last-child {
    margin-bottom: 0;
  }

  h1, h2, h3, h4, h5, h6 {
    font-family: 'Roboto Condensed', sans-serif;
  }

  a {
    color: $green-500;
  }
}

// ------
.footer--wrapper {
  text-align: center;
}
.footer--link {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;
  text-decoration: none;
  color: $grey-700;
  display: inline-block;
  padding: 0 $spacing-200;
  transition: all 200ms;

  &:hover {
    color: $green-400;
  }
}

.footer--logo {
  width: 50px;
  display: block;
  margin: auto;
  margin-bottom: $spacing-800;
  margin-top: $spacing-800;
}

